--- a/packages/botonic-react/package.json
+++ b/packages/botonic-react/package.json
@@ -15,6 +15,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-json-tree": "^0.11.2",
+    "react-json-editor-viewer": "^1.0.4",
+    "pusher-js": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-textarea-autosize": "^7.1.0",
     "unescape": "^1.0.1"
