tests with babel without webpack
jest fails due to scss

--- a/packages/botonic-plugin-contentful/tsconfig.json
+++ b/packages/botonic-plugin-contentful/tsconfig.json
@@ -15,10 +15,12 @@
     "allowSyntheticDefaultImports": true,
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "tests/**/*"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "*.scss"
   ]
 }
