--- a/packages/botonic-plugin-contentful/package.json
+++ b/packages/botonic-plugin-contentful/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "build": "rm -rf lib && tsc",
+    "babel": "rm -rf lib && babel src --out-dir lib",
     "test": "jest",
     "lint": "node_modules/.bin/eslint --fix --quiet src/**/*.ts* tests/**/*.ts*",
     "prepare": "npm run build",
@@ -14,25 +15,27 @@
   "main": "src/index.ts",
   "dependencies": {
     "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
     "@botonic/react": "^0.8.0-beta.2",
     "@types/react": "^16.8.12",
-    "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^1.0.0",
     "contentful": "^7.5.0",
     "typescript": "^3.4.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "latest",
     "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
+    "babel-plugin-react-css-modules": "^5.2.4",
+    "babel-preset-jest": "^24.6.0",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-prettier": "^4.1.0",
