--- a/packages/botonic-react/package.json
+++ b/packages/botonic-react/package.json
@@ -10,11 +10,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@botonic/core": "0.7.0",
+    "@botonic/core": "0.8.0-beta.2",
     "axios": "^0.18.0",
-    "babel-plugin-add-module-exports": "^1.0.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-hot-loader": "^4.8.3",
@@ -24,6 +21,9 @@
     "unescape": "^1.0.1"
   },
   "devDependencies": {
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
