--- a/packages/botonic-core/package.json
+++ b/packages/botonic-core/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@botonic/core",
-  "version": "0.7.0",
+  "version": "0.8.0-beta.2",
   "description": "Build Chatbots using React",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf lib && babel src --out-dir lib"
@@ -19,6 +19,15 @@
   "dependencies": {
     "axios": "^0.18.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "@babel/runtime": "^7.4.3"
+  },
   "homepage": "https://github.com/hubtype/botonic#readme"
 }
