--- a/packages/botonic-plugin-contentful/tsconfig.json
+++ b/packages/botonic-plugin-contentful/tsconfig.json
@@ -1,26 +1,24 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "*": [
-        "types/*"
-      ]
-    },
-    "lib": [
-      "es2015"
-    ],
-    "outDir": "lib",
-    "jsx": "react",
-    "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "jsx": "react",
+    "module": "umd",
+    "noImplicitAny": false,
+    "outDir": "./dist/",
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "sourceMap": true,
+    "target": "es6",
+    "moduleResolution": "node",
+    "strict": true,
+    "alwaysStrict": true,
+    "strictNullChecks": false,
+    "downlevelIteration": true
   },
   "include": [
-    "src/**/*",
-    "tests/**/*"
+    "./src/",
   ],
   "exclude": [
-    "node_modules",
-    "dist",
-    "*.scss"
+    "node_modules"
   ]
 }
