--- a/packages/botonic-cli/templates/tutorial/package.json
+++ b/packages/botonic-cli/templates/tutorial/package.json
@@ -11,11 +11,11 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(scss|css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
   },
   "dependencies": {
-    "@botonic/react": "0.7.0"
+    "@botonic/react": "0.8.0-beta.2"
   },
   "devDependencies": {
     "babel-jest": "^24.1.0",
