--- a/packages/botonic-plugin-contentful/package.json
+++ b/packages/botonic-plugin-contentful/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
-    "build": "rm -rf lib && tsc",
-    "babel": "rm -rf lib && babel src --out-dir lib",
+    "build_typescript": "rm -rf lib && tsc",
+    "build_babel": "rm -rf lib && babel src --out-dir lib",
+    "build": "webpack --env.node",
+    "check-types": "tsc",
     "test": "jest",
     "lint": "node_modules/.bin/eslint --fix --quiet src/**/*.ts* tests/**/*.ts*",
     "prepare": "npm run build",
@@ -9,6 +11,16 @@
     "preversion": "npm run lint",
     "version": "npm run lint && git add -A src tests",
     "postversion": "git push && git push --tags"
+  },
+  "jest": {
+    "rootDir": "tests",
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@botonic).+\\.(js|jsx|ts)$"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(scss|css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   },
   "name": "botonic-plugin-contentful",
   "version": "0.0.1",
@@ -22,6 +34,11 @@
     "@types/react": "^16.8.12",
     "babel-plugin-add-module-exports": "^1.0.0",
     "contentful": "^7.5.0",
+    "file-loader": "^3.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "null-loader": "^0.1.1",
+    "react-hot-loader": "^4.8.3",
+    "ts-loader": "^5.3.3",
     "typescript": "^3.4.1"
   },
   "devDependencies": {
@@ -36,14 +53,25 @@
     "babel-jest": "^24.7.1",
     "babel-plugin-react-css-modules": "^5.2.4",
     "babel-preset-jest": "^24.6.0",
+    "clean-webpack-plugin": "^2.0.1",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "html-webpack-plugin": "^3.2.0",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "imagemin-webpack": "^4.1.0",
     "jest": "^24.7.1",
     "prettier": "^1.16.4",
-    "ts-jest": "^24.0.2"
+    "terser-webpack-plugin": "^1.2.1",
+    "ts-jest": "^24.0.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.1.14"
   },
   "engines": {
     "node": ">=8.10.0"
