--- a/packages/botonic-plugin-contentful/package.json
+++ b/packages/botonic-plugin-contentful/package.json
@@ -12,16 +12,6 @@
     "version": "npm run lint && git add -A src tests",
     "postversion": "git push && git push --tags"
   },
-  "jest": {
-    "rootDir": "tests",
-    "transformIgnorePatterns": [
-      "/node_modules/(?!@botonic).+\\.(js|jsx|ts)$"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(scss|css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
-  },
   "name": "botonic-plugin-contentful",
   "version": "0.0.1",
   "main": "src/index.ts",
@@ -32,13 +22,17 @@
     "@babel/preset-react": "^7.0.0",
     "@botonic/react": "^0.8.0-beta.2",
     "@types/react": "^16.8.12",
+    "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^1.0.0",
     "contentful": "^7.5.0",
+    "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
+    "node-sass": "^4.11.0",
     "null-loader": "^0.1.1",
     "react-hot-loader": "^4.8.3",
-    "ts-loader": "^5.3.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.4.1"
   },
   "devDependencies": {
