--- a/packages/botonic-plugin-contentful/package.json
+++ b/packages/botonic-plugin-contentful/package.json
@@ -1,7 +1,5 @@
 {
   "scripts": {
-    "build_typescript": "rm -rf lib && tsc",
-    "build_babel": "rm -rf lib && babel src --out-dir lib",
     "build": "webpack --env.node",
     "check-types": "tsc",
     "test": "jest",
@@ -12,19 +10,9 @@
     "version": "npm run lint && git add -A src tests",
     "postversion": "git push && git push --tags"
   },
-  "jest": {
-    "rootDir": "tests",
-    "transformIgnorePatterns": [
-      "/node_modules/(?!@botonic).+\\.(js|jsx|ts)$"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(scss|css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
-  },
   "name": "botonic-plugin-contentful",
   "version": "0.0.1",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "dependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-transform-runtime": "^7.4.3",
@@ -32,13 +20,16 @@
     "@babel/preset-react": "^7.0.0",
     "@botonic/react": "^0.8.0-beta.2",
     "@types/react": "^16.8.12",
+    "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^1.0.0",
     "contentful": "^7.5.0",
+    "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
+    "node-sass": "^4.11.0",
     "null-loader": "^0.1.1",
-    "react-hot-loader": "^4.8.3",
-    "ts-loader": "^5.3.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.4.1"
   },
   "devDependencies": {
@@ -69,6 +60,7 @@
     "prettier": "^1.16.4",
     "terser-webpack-plugin": "^1.2.1",
     "ts-jest": "^24.0.2",
+    "ts-mockito": "^2.3.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.1.14"
