--- a/packages/botonic-plugin-contentful/package.json
+++ b/packages/botonic-plugin-contentful/package.json
@@ -12,36 +12,31 @@
   },
   "name": "botonic-plugin-contentful",
   "version": "0.0.1",
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
   "dependencies": {
+    "@botonic/react": "^0.8.0-beta.2",
+    "contentful": "^7.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "typescript": "^3.4.1",
+    "ts-loader": "^5.3.3"
+  },
+  "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "@botonic/react": "^0.8.0-beta.2",
-    "@types/react": "^16.8.12",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-add-module-exports": "^1.0.0",
-    "contentful": "^7.5.0",
-    "css-loader": "^2.1.1",
-    "file-loader": "^3.0.1",
-    "identity-obj-proxy": "^3.0.0",
-    "node-sass": "^4.11.0",
-    "null-loader": "^0.1.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "typescript": "^3.4.1"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "latest",
     "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.12",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-react-css-modules": "^5.2.4",
     "babel-preset-jest": "^24.6.0",
     "clean-webpack-plugin": "^2.0.1",
@@ -63,10 +58,15 @@
     "ts-mockito": "^2.3.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "file-loader": "^3.0.1",
+    "null-loader": "^0.1.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "node-sass": "^4.11.0",
+    "css-loader": "^2.1.1"
   },
   "engines": {
     "node": ">=8.10.0"
-  },
-  "types": "lib/index.d.ts"
+  }
 }
