--- a/packages/botonic-plugin-contentful/tsconfig.json
+++ b/packages/botonic-plugin-contentful/tsconfig.json
@@ -11,8 +11,8 @@
     ],
     "outDir": "lib",
     "jsx": "react",
-    "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "declaration": true
   },
   "include": [
     "src/**/*",
