--- a/packages/botonic-plugin-contentful/package.json
+++ b/packages/botonic-plugin-contentful/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "webpack --env.node",
+    "build": "webpack ",
     "check-types": "tsc",
     "test": "jest",
     "lint": "node_modules/.bin/eslint --fix --quiet src/**/*.ts* tests/**/*.ts*",
@@ -12,14 +12,15 @@
   },
   "name": "botonic-plugin-contentful",
   "version": "0.0.1",
-  "main": "lib/src/index.js",
-  "types": "lib/src/index.d.ts",
+  "main": "lib/index.js",
   "dependencies": {
+    "@babel/types": "7.4.0",
     "@botonic/react": "^0.8.0-beta.2",
+    "awesome-typescript-loader": "^5.2.1",
     "contentful": "^7.5.0",
     "identity-obj-proxy": "^3.0.0",
-    "typescript": "^3.4.1",
-    "ts-loader": "^5.3.3"
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
