--- a/packages/botonic-plugin-contentful/tsconfig.json
+++ b/packages/botonic-plugin-contentful/tsconfig.json
@@ -7,8 +7,10 @@
       ]
     },
     "lib": [
-      "es2015"
+      "es2015",
+      "dom"
     ],
+    "module": "commonjs",
     "outDir": "lib",
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
